--- a/demo/src/components/Preview/Preview.scss
+++ b/demo/src/components/Preview/Preview.scss
@@ -5,36 +5,33 @@
   text-align: center;
 
   .image-container {
-    max-width: 400px;
-    margin: 0 auto 16px auto;
-
-    &::after {
-      content: "\f381";
-      font-family: "Font Awesome 5 Free";
-      font-weight: 900;
-      position: absolute;
-      top: 0;
-      left: 0;
-
-      @include size;
-      background-color: rgba(black, 0.3);
-
-      @include flex;
-      cursor: pointer;
-
-      opacity: 0;
-      transition: opacity 0.3s;
-      pointer-events: none;
-    }
-
-    &:hover::after {
-      opacity: 1;
-    }
+    max-width: 375px;
+    margin: 0 auto 24px auto;
 
     img {
       display: block;
       width: 100%;
       @include shadow;
+    }
+
+    button {
+      border-radius: 50%;
+      @include size(38px);
+      padding: 0;
+    }
+
+    .btn-cross {
+      position: absolute;
+      top: 0;
+      right: 0;
+      transform: translate(50%, -50%);
+    }
+
+    .btn-download {
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      transform: translate(-50%, 50%);
     }
   }
 
