chore: update demo style

--- a/demo/src/App/App.scss
+++ b/demo/src/App/App.scss
@@ -4,4 +4,11 @@
   min-height: 100vh;
   padding: 0 8px;
   @include flex;
+  flex-direction: column;
+
+  .title {
+    color: $color-font;
+    background-color: $bg-dark;
+    padding: 8px;
+  }
 }
