--- a/demo/src/assets/styles.scss
+++ b/demo/src/assets/styles.scss
@@ -1,4 +1,5 @@
 $color-font: #eee;
+$bg-dark: rgba(black, 0.8);
 
 @mixin flex {
   display: flex;
@@ -20,4 +21,22 @@ $color-font: #eee;
 
 @mixin shadow {
   box-shadow: 0 8px 16px rgba(black, 0.3);
+}
+
+.fade-enter {
+  opacity: 0;
+}
+
+.fade-enter-active {
+  opacity: 1;
+  transition: opacity 0.3s;
+}
+
+.fade-exit {
+  opacity: 1;
+}
+
+.fade-exit-active {
+  opacity: 0;
+  transition: opacity 0.3s;
 }
